# leia-laulja

./: .gitignore  README.md  blur_detector.py  cleanup_orphaned_assignments.py  cleanup_orphaned_thumbnails.py  face_grouping_processor.py  fix_face_counts.py  gpu_test.py  gpu_verify.py  leia-laulja.indoorsman.ee.nginx  migratooor.sql  pyproject.toml  reset_merge_attempts.py  single_core_merger.py  small_cluster_merger.py  test-insightface.py  update_representative_thumbnails.py  video_face_processor.py  viewer.py
migrations/: 0001_initial.py
static/: style.css
templates/: base.html  cluster_delete.html  cluster_detail.html  cluster_list.html  faces_list.html  tag_detail.html  tag_list.html
