[project]
name = "leia-laulja"
version = "0.1.0"
description = "Leiab Iseoma videost (https://www.teliatv.ee/saade/34368457/1/xxviii-laulupidu-iseoma-suurkontsert) kõik näod"
requires-python = ">=3.13"
dependencies = [
    "insightface",
    "onnxruntime-gpu",
    "nanodjango",
    "ijson",
    "psutil",
    "cupy-cuda12x",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
exclude = [
    "estonian_song_festival_faces.json", # Mine is 18.7 GB
]
